--- a/FormFit/App/Base.lproj/Main.storyboard
+++ b/FormFit/App/Base.lproj/Main.storyboard
@@ -1,13 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="28d-uK-gv5">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="28d-uK-gv5">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--View Controller-->
+        <scene sceneID="JWu-fV-9Qc">
+            <objects>
+                <viewController id="LhG-Ze-6dY" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2IP-fQ-3UE"/>
+                        <viewControllerLayoutGuide type="bottom" id="gmq-1R-ILM"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="qxP-Ak-LxM">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="LpW-sm-JZg">
+                                <rect key="frame" x="159.66666666666666" y="364" width="71" height="116"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I5q-ad-SyV">
+                                        <rect key="frame" x="0.0" y="0.0" width="71" height="30"/>
+                                        <state key="normal" title="Squat"/>
+                                        <connections>
+                                            <segue destination="BYZ-38-t0r" kind="show" id="Y1i-sp-CAK"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RCq-Qo-P4T">
+                                        <rect key="frame" x="0.0" y="43" width="71" height="30"/>
+                                        <state key="normal" title="Deadlift"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DOI-rM-zZz">
+                                        <rect key="frame" x="0.0" y="86" width="71" height="30"/>
+                                        <state key="normal" title="Bicep Curl"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="LpW-sm-JZg" firstAttribute="centerX" secondItem="qxP-Ak-LxM" secondAttribute="centerX" id="BoD-FH-XVZ"/>
+                            <constraint firstItem="LpW-sm-JZg" firstAttribute="centerY" secondItem="qxP-Ak-LxM" secondAttribute="centerY" id="I0V-dP-Jgs"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="bL1-4G-zln"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cjf-cJ-rkr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-783" y="74"/>
+        </scene>
         <!--Workout View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -249,12 +294,12 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="t4m-P8-TRb"/>
+                        <segue destination="LhG-Ze-6dY" kind="relationship" relationship="rootViewController" id="Sqn-wK-4Vf"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9OK-v8-O97" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-808" y="74"/>
+            <point key="canvasLocation" x="-1700" y="74"/>
         </scene>
     </scenes>
     <resources>
